# Voxel

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  glad.c
include/glad/: glad.h
lib/: glfw3.lib
src/: Application.cpp  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Rendering.cpp  Rendering.h  Scene.cpp  Scene.h  Shader.h  Textures.cpp  Textures.h  Window.cpp  Window.h  constant.h  main.cpp
src/shaders/: fragmentShader.glsl  vertexShader.glsl
